--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 </head>
 
 <body>
-<h2>TODO</h2>
+<h2>TODO</h2> <button id="theme_toggler"><i><img src="/images/icon-moon.svg" alt=""></i></button>
+<p id="done"></p>
+
   <input type="text" name="" id="add_td" class="card" placeholder="Create a new todo..">
 
 <div id="myTodos" class="card todos">
 
 </div>
-  
 
-  <span id="theme_toggler">
-    Change theme
-  </span>
+ 
   <script src="/script.js"></script>
 
   <script>
